fix input id, delete item from array

--- a/planner.html
+++ b/planner.html
@@ -17,17 +17,12 @@
 
     <div class="tasksort">
 
-        <div class="pend"  id="pend">
+        <div class="pend"  >
             <div class="pendTitle">
                 <h1>Pending</h1>
             </div>
-            <div class="pendItems">
-                <div class="pendItem">
-                    <h2>This is a task</h2>
-                    <div class="pendButton">
-                        <button>🠊</button>
-                    </div>
-                </div>
+            <div class="pendItems" id="pend">
+
             </div>
         </div>
 
@@ -35,14 +30,8 @@
             <div class="ongTitle">
                 <h1>Ongoing</h1>
             </div>
-            <div class="ongItems">
-                <div class="ongItem">
-                    <h2>This is a task</h2>
-                    <div class="ongButton">
-                        <button>🠈</button>
-                        <button>🠊</button>
-                    </div>
-                </div>
+            <div class="ongItems" id="ong">
+                
             </div>
         </div>
 
@@ -51,10 +40,8 @@
             <div class="endTitle">
                 <h1>Completed</h1>
             </div>
-            <div class="endItems">
-                <div class="endItem">
-                    <h2>This is a task</h2>
-                </div>
+            <div class="endItems" id="end">
+
             </div>
 
         </div>
